MCR-3029 use java 21 features (#2050)
* use switch pattern matching
* use SequencedCollection
* use virtual threads
* use @snippet in MCRConfiguration2
* simplified MCRCalendar